# esri-bridge-v2

./: .env.sample  .gitignore  Dockerfile  GeodesignHub.py  Procfile  README.md  app.py  config.py  conn.py  data_definitions.py  docker-compose.yml  esri_fields_schema_helper.py  gdh_downloads_helper.py  gdh_import_helper.py  notifications_helper.py  pyproject.toml  requirements.txt  storymap_helper.py  utils.py  worker.py
.github/workflows/: test.yaml
esri_bridge/: __init__.py
esri_bridge/templates/: export.html  import.html  import_feature_service_layers.html  import_feature_service_select.html  layout.html
esri_bridge/templates/export_result/: design_export_status.html
esri_bridge/templates/import_result/: design_import_status.html
storymap_templates/: gdh_default_storymap_template.yaml
templates/: error.html  export.html  home.html  layout.html  success.html
tests/: test_storymap_helper.py
