[project]
name = "esri-bridge"
version = "2.0.0"
description = "ArcGIS Online <-> Geodesignhub bridge application"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "markupsafe>=3.0.3",
    "werkzeug>=3.0.4",
    "geojson>=3.1.0",
    "gunicorn>=23.0.0",
    "itsdangerous>=2.2.0",
    "requests>=2.32.5",
    "shapely>=2.1.2",
    "cligj>=0.7.2",
    "redis>=7.2.1",
    "rq>=2.7.0",
    "dacite>=1.9.2",
    "python-dotenv>=1.0.1",
    "numpy>=2.4.2",
    "pyproj>=3.7.2",
    "flask-babel>=4.0.0",
    "flask-wtf>=1.2.2",
    "bootstrap-flask>=2.4.0",
    "arcgis>=2.4.2",
    "arcgis-mapping>=4.33.1",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "pyyaml>=6.0.3",
    "fiona>=1.10.1",
    "geopandas>=1.1.2",
    "boto3>=1.42.61",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
